[gd_scene load_steps=3 format=3 uid="uid://d150ldwv7w1xs"]

[ext_resource type="Script" uid="uid://bs2x3eetn2eaf" path="res://scripts/hud.gd" id="1_oo0fn"]
[ext_resource type="FontFile" uid="uid://cjl51oavbh5sj" path="res://dodge_the_creeps_2d_assets/fonts/Xolonium-Regular.ttf" id="2_5ysmq"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_oo0fn")

[node name="ScoreMarginContainer" type="MarginContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -37.0
offset_right = 37.0
offset_bottom = 72.0
grow_horizontal = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="ScoreLabel" type="Label" parent="ScoreMarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5ysmq")
theme_override_font_sizes/font_size = 24
text = "Score: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MessageMarginContainer" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.5
offset_top = -21.5
offset_right = 85.5
offset_bottom = 21.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="MessageLabel" type="Label" parent="MessageMarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5ysmq")
theme_override_font_sizes/font_size = 32
text = "Dodge the Creeps!!!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartMarginContainer" type="MarginContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -72.0
offset_top = -98.0
offset_right = 72.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 50

[node name="StartButton" type="Button" parent="StartMarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5ysmq")
theme_override_font_sizes/font_size = 24
text = "Start
"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartMarginContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
